--- a/practice_5/styles.css
+++ b/practice_5/styles.css
@@ -49,7 +49,8 @@
 .textblock {
     display: flex;
     justify-content: center;
-    margin: 200px;
+    width: 1040px;
+    margin: 200px auto;
     padding: 20px;
     border: 3px solid #F8BFC7;
     border-radius: 20px;
@@ -69,7 +70,10 @@
 
 .products {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    width: 1040px;
+    margin: 0 auto;
+
 }
 
 .prod {
