--- a/practice_6/styles.css
+++ b/practice_6/styles.css
@@ -29,9 +29,10 @@
     display: flex;
     justify-content:center;
     align-items: center;
+    text-align: center;
     width: 100%;
     height: 300px;
-    font-size: 3em;
+    font-size: 2em;
     border: 5px solid #000000;
     margin: 20px 0;
 }
@@ -53,6 +54,7 @@
 
     .section {
         width: 45%;
+        font-size: 3em;
     }
 
     .footer {
